--- a/README.html
+++ b/README.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Hebrew PiDecoder</title>
+    <title>Hebrew Pi</title>
 </head>
 <body>
 
-    <h1 id="hebrew-pidecoder">Hebrew PiDecoder</h1>
+    <h1 id="hebrew-pi">Hebrew Pi</h1>
 <p>A libre and open-source software written in C# that allows to decode Pi's decimal sequences into meaningful phrases, interpreting each unique 10-digit group as a representation of Hebrew letters, and utilizing linguistic patterns through the principles of Gematria and Kabbalah.</p>
 
 
