--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
 <body>
 
     <h1 id="hebrew-pi">Hebrew Pi</h1>
-<p>A libre and open-source software written in C# that allows to decode Pi's decimal sequences into meaningful phrases, interpreting each unique 10-digit group as a representation of Hebrew letters, and utilizing linguistic patterns through the principles of Gematria and Kabbalah.</p>
+<p>A libre and open-source software written in C# that allows decoding decimal sequences of Pi into meaningful sentences, by interpreting each motif of 10 digits as a representation of Hebrew letters using linguistic patterns through the principles of Gematria and Kabbalah.</p>
 
 
 </body>
