--- a/README.html
+++ b/README.html
@@ -36,6 +36,8 @@
 </ol>
 <h2 id="functionalities">Functionalities</h2>
 <ul>
+<li>Import Pi decimals from text file.</li>
+<li>Reduce repetitions: loop to add the position until none remain or there is more.</li>
 <li>Links to various online resources.</li>
 <li>English, French.</li>
 </ul>
@@ -181,7 +183,7 @@
 <h2 id="changelog">Changelog</h2>
 <h4 id="version-0.1">Version 0.1</h4>
 <ul>
-<li>Prototype #1</li>
+<li>Prototype #1 with data creation and reduction of repeating motifs.</li>
 </ul>
 
 
