--- a/README.html
+++ b/README.html
@@ -50,9 +50,6 @@
 </ul>
 <h2 id="download">Download</h2>
 <p><strong>What's new in the latest version</strong></p>
-<ul>
-<li>Prototype #1.</li>
-</ul>
 <p><a href="https://github.com/Ordisoftware/Hebrew-Pi/releases/latest">Last release</a></p>
 <h2 id="screenshots">Screenshots</h2>
 <h2 id="system-frequently-asked-questions">System Frequently asked questions</h2>
@@ -81,8 +78,6 @@
 <h4 id="what-is-the-windows-double-buffering">What is the Windows double-buffering?</h4>
 <p>When enabled, this will speed up rendering of the main form when it is displayed, but it may cause a slight black flicker.</p>
 <p>When disabled, top menu and some controls painting may cause latency, and dynamic items can be generated slowly the larger the number.</p>
-<h4 id="what-to-do-if-there-is-a-problem-with-the-display">What to do if there is a problem with the display?</h4>
-<p>The refresh view button of the menu at the top redraws the entire form.</p>
 <h2 id="application-frequently-asked-questions">Application Frequently asked questions</h2>
 <h2 id="command-line-options">Command-line options</h2>
 <ul>
@@ -184,6 +179,8 @@
 <h4 id="version-0.1">Version 0.1</h4>
 <ul>
 <li>Prototype #1 with data creation and reduction of repeating motifs.</li>
+<li>Research and feasibility study code, partially organized and refactored.</li>
+<li>No really defined user interface yet.</li>
 </ul>
 
 
